--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,57 +35,70 @@ jobs:
       - name: Set up Python & Build Wheel
         shell: bash
         run: |
-          set -euxo pipefail  # 开启严格模式，遇到错误立即退出，并显示每条命令
-      
+          set -euxo pipefail  # 严格模式
+  
           PYTHON_VERSION=${{ matrix.python-version }}
           echo "=== 当前 Python 版本: $PYTHON_VERSION ==="
-      
-          # 拼接 Python tag，替换所有点号
+  
+          # 拼接 Python tag
           PYTHON_TAG="cp${PYTHON_VERSION//./}-cp${PYTHON_VERSION//./}"
           echo "拼接的 Python TAG: $PYTHON_TAG"
-      
+  
           echo "=== /opt/python 下实际存在的目录 ==="
           ls -1 /opt/python
-      
-          # 尝试用 grep 模糊匹配带 t 或不带 t 的目录
-          PYTHON_DIR=$(ls -1 /opt/python | grep -E "^${PYTHON_TAG}t?$" | head -1)
-          if [[ -n "$PYTHON_DIR" ]]; then
-            PYTHON_DIR="/opt/python/$PYTHON_DIR"
-            echo "✅ 找到 Python 目录: $PYTHON_DIR"
-          else
-            echo "❌ 没找到解释器目录"
-            exit 1
+  
+          # 遍历 /opt/python 匹配带 t 或普通目录
+          PYTHON_DIR=""
+          for dir in /opt/python/*; do
+              base=$(basename "$dir")
+              if [[ "$base" == "${PYTHON_TAG}t" ]]; then
+                  PYTHON_DIR="$dir"
+                  echo "✅ 找到带 t 的目录: $PYTHON_DIR"
+                  break
+              elif [[ "$base" == "$PYTHON_TAG" ]]; then
+                  PYTHON_DIR="$dir"
+                  echo "✅ 找到普通目录: $PYTHON_DIR"
+                  # 继续循环优先找 t
+              else
+                  echo "❌ 跳过目录: $dir"
+              fi
+          done
+  
+          if [[ -z "$PYTHON_DIR" ]]; then
+              echo "❌ 没找到解释器目录 (尝试匹配 cpXXX-cpXXX 和 cpXXX-cpXXXt)"
+              echo "=== /opt/python 下实际存在的目录 ==="
+              ls -1 /opt/python
+              echo "=== 拼接的 Python_TAG: $PYTHON_TAG ==="
+              exit 1
           fi
-      
+  
           PYTHON_BIN="${PYTHON_DIR}/bin"
           echo "使用解释器路径: $PYTHON_BIN"
-      
+  
           echo "=== Python 和 pip 版本 ==="
           $PYTHON_BIN/python --version
           $PYTHON_BIN/pip --version
-      
+  
           echo "升级 pip 并安装依赖..."
           $PYTHON_BIN/pip install --upgrade pip
           $PYTHON_BIN/pip install maturin==1.9.2 twine
-      
+  
           OUTPUT_DIR="/tmp/wheels/linux-py${PYTHON_VERSION}"
-          mkdir -p $OUTPUT_DIR
+          mkdir -p "$OUTPUT_DIR"
           echo "输出目录: $OUTPUT_DIR"
-      
+  
           echo "清理 Cargo 构建缓存..."
           cargo clean
-      
+  
           echo "开始构建 wheel..."
           $PYTHON_BIN/maturin build \
             --release \
             --manylinux 2_28 \
             --interpreter $PYTHON_BIN/python \
-            --out $OUTPUT_DIR
-      
+            --out "$OUTPUT_DIR"
+  
           echo "=== 构建完成，列出输出目录内容 ==="
-          ls -lh $OUTPUT_DIR
-
-
+          ls -lh "$OUTPUT_DIR"
   
       - name: List built wheels
         shell: bash
@@ -93,32 +106,42 @@ jobs:
           PYTHON_VERSION=${{ matrix.python-version }}
           OUTPUT_DIR="/tmp/wheels/linux-py${PYTHON_VERSION}"
           echo "=== 列出 $OUTPUT_DIR 下的文件 ==="
-          ls -lh $OUTPUT_DIR
+          ls -lh "$OUTPUT_DIR"
   
       - name: Verify wheel integrity
         shell: bash
         run: |
           PYTHON_VERSION=${{ matrix.python-version }}
-          PYTHON_TAG="cp${PYTHON_VERSION/./}-cp${PYTHON_VERSION/./}"
+          PYTHON_TAG="cp${PYTHON_VERSION//./}-cp${PYTHON_VERSION//./}"
   
-          # 使用 -name 匹配 cpXXX-cpXXX 或 cpXXX-cpXXXt
-          PYTHON_DIR=$(find /opt/python -maxdepth 1 -type d \( -name "${PYTHON_TAG}" -o -name "${PYTHON_TAG}t" \) | head -1)
+          PYTHON_DIR=""
+          for dir in /opt/python/*; do
+              base=$(basename "$dir")
+              if [[ "$base" == "${PYTHON_TAG}t" ]]; then
+                  PYTHON_DIR="$dir"
+                  break
+              elif [[ "$base" == "$PYTHON_TAG" ]]; then
+                  PYTHON_DIR="$dir"
+              fi
+          done
+  
           if [[ -z "$PYTHON_DIR" ]]; then
-            echo "❌ 没找到解释器目录 (尝试匹配 cpXXX-cpXXX 和 cpXXX-cpXXXt)"
-            ls -1 /opt/python
-            exit 1
+              echo "❌ 没找到解释器目录"
+              ls -1 /opt/python
+              exit 1
           fi
-          PYTHON_BIN="${PYTHON_DIR}/bin"
   
+          PYTHON_BIN="${PYTHON_DIR}/bin"
           OUTPUT_DIR="/tmp/wheels/linux-py${PYTHON_VERSION}"
           echo "=== 使用 ${PYTHON_BIN} 验证 wheel ==="
-          ${PYTHON_BIN}/python -m twine check $OUTPUT_DIR/*.whl
+          ${PYTHON_BIN}/python -m twine check "$OUTPUT_DIR"/*.whl
   
       - name: Upload Linux wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-linux-py${{ matrix.python-version }}
           path: /tmp/wheels/linux-py${{ matrix.python-version }}/*.whl
+
 
   build-macos:
     runs-on: macos-latest
